[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SnakesInSpace"
authors = [
    {name = "Samuel Woodward", email = "sam@woodward.fyi"}
]
description = "A Python library for the SpaceTraders game"
readme = "README.md"
keywords = ["SpaceTraders"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "0.0.17"
dependencies = ["httpx", "python-dateutil"]

[project.urls]
Homepage = "https://github.com/PyWoody/SnakesInSpace"

[tool.setuptools.packages.find]
exclude = ["recipes"]
